traceback.txt
I'm sorry, but an uncaught exception occurred.

While running game code:
  File "game/script.rpy", line 249, in script
    menu:
  File "game/screens.rpy", line 207, in execute
    screen choice(items):
  File "game/screens.rpy", line 207, in execute
    screen choice(items):
  File "game/screens.rpy", line 210, in execute
    vbox:
  File "game/screens.rpy", line 211, in execute
    for i in items:
  File "game/screens.rpy", line 212, in execute
    textbutton i.caption action i.action
  File "<none>", line 1
    $ random.choice(location)
    ^                        
SyntaxError: invalid syntax

-- Full Traceback ------------------------------------------------------------

Traceback (most recent call last):
  File "game/script.rpy", line 249, in script
    menu:
  File "renpy/ast.py", line 1815, in execute
    choice = renpy.exports.menu(choices, self.set, args, kwargs, item_arguments)
             ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/exports/menuexports.py", line 135, in menu
    rv = renpy.store.menu(new_items)
         ~~~~~~~~~~~~~~~~^^^^^^^^^^^
  File "renpy/exports/menuexports.py", line 418, in display_menu
    rv = renpy.ui.interact(mouse="menu", type=type, roll_forward=roll_forward)
         ~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/ui.py", line 304, in interact
    rv = renpy.game.interface.interact(roll_forward=roll_forward, **kwargs)
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/display/core.py", line 2117, in interact
    repeat, rv = self.interact_core(
                 ~~~~~~~~~~~~~~~~~~^
        preloads=preloads,
        ^^^^^^^^^^^^^^^^^^
    ...<4 lines>...
        **kwargs,
        ^^^^^^^^^
    )
    ^
  File "renpy/display/core.py", line 2655, in interact_core
    root_widget.visit_all(lambda d: d.per_interact())
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/display/displayable.py", line 457, in visit_all
    d.visit_all(callback, seen)
    ~~~~~~~~~~~^^^^^^^^^^^^^^^^
  File "renpy/display/displayable.py", line 457, in visit_all
    d.visit_all(callback, seen)
    ~~~~~~~~~~~^^^^^^^^^^^^^^^^
  File "renpy/display/displayable.py", line 457, in visit_all
    d.visit_all(callback, seen)
    ~~~~~~~~~~~^^^^^^^^^^^^^^^^
  File "renpy/display/screen.py", line 503, in visit_all
    callback(self)
    ~~~~~~~~^^^^^^
  File "renpy/display/core.py", line 2655, in <lambda>
    root_widget.visit_all(lambda d: d.per_interact())
                                    ~~~~~~~~~~~~~~^^ 
  File "renpy/display/screen.py", line 514, in per_interact
    self.update()
    ~~~~~~~~~~~^^
  File "renpy/display/screen.py", line 715, in update
    self.screen.function(**self.scope)
    ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^
  File "game/screens.rpy", line 207, in execute
    screen choice(items):
  File "game/screens.rpy", line 207, in execute
    screen choice(items):
  File "game/screens.rpy", line 210, in execute
    vbox:
  File "game/screens.rpy", line 211, in execute
    for i in items:
  File "game/screens.rpy", line 212, in execute
    textbutton i.caption action i.action
  File "renpy/ui.py", line 1001, in _textbutton
    text = renpy.text.text.Text(label, style=text_style, substitute=substitute, scope=scope, **text_kwargs)
           ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/text/text.py", line 2198, in __init__
    self.set_text(text, scope, substitute)  # type: ignore
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^                
  File "renpy/text/text.py", line 2332, in set_text
    i, did_sub = renpy.substitutions.substitute(i, scope, substitute)  # type: ignore
                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^                
  File "renpy/substitutions.py", line 355, in substitute
    s = interpolate(s, variables)  # type: ignore
        ~~~~~~~~~~~^^^^^^^^^^^^^^                
  File "renpy/substitutions.py", line 89, in interpolate
    raise e
  File "renpy/substitutions.py", line 81, in interpolate
    value = renpy.python.py_eval(code, {}, scope)
            ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "renpy/python.py", line 1303, in py_eval
    code = py_compile(code, "eval")
           ~~~~~~~~~~^^^^^^^^^^^^^^
  File "renpy/python.py", line 1260, in py_compile
    raise e
  File "renpy/python.py", line 1190, in py_compile
    tree = compile(source, filename, py_mode, ast.PyCF_ONLY_AST | flags, True)
           ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<none>", line 1
    $ random.choice(location)
    ^                        
SyntaxError: invalid syntax

Windows-11-10.0.26100-SP0 AMD64
Ren'Py 8.5.0.25111603
Raconteurs & Historians 1.0
Sat Dec 27 21:04:19 2025
